# disney-kinesis-client-rust

./: Cargo.toml
src/: errors.rs  lib.rs  oversee.rs
