[package]
name = "disney-kinesis-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-process = "2.3.1"
async-rwlock = "1.3.1"
async-trait = "0.1.88"
aws-config = { version = "1.8.1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.80.0"
aws-sdk-dynamodb = "1.82.0"
aws-sdk-kinesis = "1.78.0"
aws-sdk-schemas = "1.74.0"
aws-smithy-runtime-api = "1.8.1"
aws-smithy-types = "1.3.2"
derive_more = { version = "2.0.1", features = ["display", "debug", "error", "from"] }
futures = "0.3.31"
itertools = "0.14.0"
md5 = "0.8.0"
prost = "0.14"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
# dependency of aws-config, there's a security advisory for 0.10.3
zerovec-derive = "0.11.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["json"] }
